--- a/stevemo.vcxproj
+++ b/stevemo.vcxproj
@@ -24,7 +24,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -43,6 +43,10 @@
     <IntDir>$(ProjectName)_$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_dbg</TargetName>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>$(SolutionDir)include;$(SolutionDir)extern\glfw-2.7.6\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -51,6 +55,8 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>tinyxml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Platform)-$(Configuration)-Lib\</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -59,29 +65,40 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+      <AdditionalIncludeDirectories>
+      </AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalLibraryDirectories>$(SolutionDir)bin\$(Platform)-$(Configuration)-Lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>tinyxml2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GameLoopApp.cpp" />
     <ClCompile Include="GameRunner.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="SteveArrayTexture.cpp" />
     <ClCompile Include="SteveFirstApp.cpp" />
     <ClCompile Include="SteveFogShader.cpp" />
     <ClCompile Include="SteveTunnelMipmap.cpp" />
     <ClCompile Include="SteveUniformPractice.cpp" />
+    <ClCompile Include="TempPractice.cpp" />
+    <ClCompile Include="XMLLevelLoader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameLoopApp.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="SteveArrayTexture.h" />
     <ClInclude Include="SteveFirstApp.h" />
     <ClInclude Include="SteveFogShader.h" />
     <ClInclude Include="SteveTunnelMipmap.h" />
     <ClInclude Include="SteveUniformPractice.h" />
+    <ClInclude Include="TempPractice.h" />
+    <ClInclude Include="XMLLevelLoader.h" />
+    <ClInclude Include="XMLLoader.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
